add backend logging
Signed-off-by: Heizal <patriciaheizal@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,6 @@ server.port=8080
 # Security Settings
 spring.security.user.name=admin
 spring.security.user.password=adminpassword
+
+#Logging
+logging.level.org.springframework.security=DEBUG
