Setup email notifications
Signed-off-by: Heizal <patriciaheizal@gmail.com>

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,16 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.profiles.active=dev
 
+# Enable SQL Logging
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# Log SQL Execution
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicTypeDescriptor=TRACE
+
+
+
 # Server Port
 server.port=8080
 
@@ -14,5 +24,18 @@ server.port=8080
 spring.security.user.name=admin
 spring.security.user.password=adminpassword
 
+#Email notification system
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=patricia.nagginda@code.berlin
+spring.mail.password=bgcttveaqdzihjch
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+
+#General logging
+#logging.level.org.springframework=DEBUG
+
 #Logging
 logging.level.org.springframework.security=DEBUG
+
+
