--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 # PostgreSQL Configuration
 spring.application.name=taskmanager
-spring.datasource.url=jdbc:postgresql://localhost:5432/taskmanagement
-spring.datasource.username=
-spring.datasource.password=
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.profiles.active=dev
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 
 # Enable SQL Logging
 spring.jpa.show-sql=true
@@ -15,27 +15,50 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicTypeDescriptor=TRACE
 
+# Server Port with SSL
+server.port=8443
+server.ssl.enabled=true
+server.ssl.key-store=classpath:keystore.p12
+server.ssl.key-store-password=${SSL_KEYSTORE_PASSWORD}
+server.ssl.key-store-type=PKCS12
+server.ssl.key-alias=${SSL_KEY_ALIAS}
 
 
-# Server Port
-server.port=8080
+# Security Settings (Optional default for local testing)
+spring.security.user.name=${SECURITY_USER_NAME}
+spring.security.user.password=${SECURITY_USER_PASSWORD}
 
-# Security Settings
-spring.security.user.name=admin
-spring.security.user.password=adminpassword
 
-#Email notification system
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=patricia.nagginda@code.berlin
-spring.mail.password=bgcttveaqdzihjch
+#Email notification system - FOR TEST ONLY
+spring.mail.host=${MAIL_HOST}
+spring.mail.port=${MAIL_PORT}
+spring.mail.username=${MAIL_USERNAME}
+spring.mail.password=${MAIL_PASSWORD}
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+# Google OAuth2 client registration
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+spring.security.oauth2.client.registration.google.scope=openid,profile,email,https://www.googleapis.com/auth/gmail.send
+spring.security.oauth2.client.registration.google.redirect-uri=${GOOGLE_REDIRECT_URI}
+spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
+
+# Google OAuth2 provider settings
+spring.security.oauth2.client.provider.google.authorization-uri=https://accounts.google.com/o/oauth2/auth
+spring.security.oauth2.client.provider.google.token-uri=https://oauth2.googleapis.com/token
+spring.security.oauth2.client.provider.google.user-info-uri=https://www.googleapis.com/oauth2/v3/userinfo
+
+
 #General logging
-#logging.level.org.springframework=DEBUG
+logging.level.org.springframework=DEBUG
 
 #Logging
-logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security=${LOGGING_LEVEL_SPRING_SECURITY:INFO}
+
+#Spring Security logging
+logging.level.org.springframework.security.oauth2.client=DEBUG
+logging.level.org.springframework.security.oauth2.client.web=DEBUG
+logging.level.org.springframework.security.web=DEBUG
 
 
