--- a/render.yaml
+++ b/render.yaml
@@ -6,8 +6,8 @@ services:
     startCommand: "java -jar build/libs/taskmanager-0.0.1-SNAPSHOT.jar"
     envVars:
       - key: GOOGLE_CLIENT_ID
-        value: ""
+        sync: false
       - key: GOOGLE_CLIENT_SECRET
-        value: ""
+        sync: false
       - key: SPRING_PROFILES_ACTIVE
         value: prod
